Remove custom shell

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,9 +18,9 @@ jobs:
     name: Cypress Tests
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash -ileo pipefail {0}
+    # defaults:
+    #   run:
+    #     shell: bash -ileo pipefail {0}
 
     strategy:
       fail-fast: false
