--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -18,9 +18,9 @@ jobs:
     name: Javascript Tests
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash -ileo pipefail {0}
+    # defaults:
+    #   run:
+    #     shell: bash -ileo pipefail {0}
 
     steps:
       - name: Checkout Streamlit code
