--- a/.github/workflows/python-versions.yml
+++ b/.github/workflows/python-versions.yml
@@ -18,9 +18,9 @@ jobs:
     name: Python Version Tests
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash -ileo pipefail {0}
+    # defaults:
+    #   run:
+    #     shell: bash -ileo pipefail {0}
     
     strategy:
       fail-fast: false
