--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "./bokeh/preload-bokeh.sh && env NODE_OPTIONS=--max_old_space_size=8192 ESLINT_NO_DEV_ERRORS=true ",
-    "build": "./bokeh/preload-bokeh.sh && env NODE_OPTIONS=--max_old_space_size=8192 GENERATE_SOURCEMAP=true craco build",
-    "buildFast": "./bokeh/preload-bokeh.sh && env NODE_OPTIONS=--max_old_space_size=8192 GENERATE_SOURCEMAP=false BUILD_AS_FAST_AS_POSSIBLE=true craco build",
-    "test": "./bokeh/preload-bokeh.sh && env NODE_OPTIONS=--max_old_space_size=8192 craco test --env=./jsdom-polyfill-env.js --runTestsByPath ${TESTPATH}",
+    "build": "./bokeh/preload-bokeh.sh && env NODE_OPTIONS=--max_old_space_size=8192 GENERATE_SOURCEMAP=true ",
+    "buildFast": "./bokeh/preload-bokeh.sh && env NODE_OPTIONS=--max_old_space_size=8192 GENERATE_SOURCEMAP=false BUILD_AS_FAST_AS_POSSIBLE=true ",
+    "test": "./bokeh/preload-bokeh.sh && env NODE_OPTIONS=--max_old_space_size=8192  test --env=./jsdom-polyfill-env.js --runTestsByPath ${TESTPATH}",
     "test:coverage": "./scripts/preload-bokeh.sh && env NODE_OPTIONS=--max_old_space_size=8192 craco test --env=./jsdom-polyfill-env.js --coverage --watchAll false --watch false ./",
     "cy:open": "unset NODE_OPTIONS && cypress open --env devicePixelRatio=1",
     "cy:run": "unset NODE_OPTIONS && cypress run",
@@ -79,7 +79,6 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.16.0",
     "@deck.gl/core": "^8.8.23",
     "@deck.gl/json": "^8.8.23",
     "@emotion-icons/emotion-icon": "^4.1.0",
@@ -128,7 +127,6 @@
     "dompurify": "^2.4.3",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
@@ -212,7 +210,6 @@
     "vega-embed": "^6.21.0",
     "vega-interpreter": "^1.0.4",
     "vega-lite": "^5.6.0",
-    "webpack": "^5.75.0",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^5.0.0",
     "workbox-webpack-plugin": "^6.5.4",
@@ -296,6 +293,7 @@
     "prettier": "^2.8.3",
     "prop-types": "^15.7.2",
     "react-responsive-carousel": "^3.2.23",
+    "rollup": "^3.18.0",
     "source-map-explorer": "^2.5.3",
     "start-server-and-test": "^1.15.3",
     "timezone-mock": "^1.3.6",
