Initial work for prototype

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@emotion-icons/material-outlined": "^3.14.0",
     "@emotion-icons/material-rounded": "^3.14.0",
     "@emotion-icons/open-iconic": "^3.14.0",
+    "@emotion/css": "^11.11.0",
     "@emotion/is-prop-valid": "^1.2.0",
     "@emotion/react": "^11.10.5",
     "@emotion/serialize": "^1.1.1",
@@ -98,6 +99,7 @@
     "react-map-gl": "^5.3.21",
     "react-markdown": "^8.0.4",
     "react-plotly.js": "^2.6.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.5",
     "react-virtualized": "^9.21.2",
@@ -156,6 +158,7 @@
     "@types/react-html-parser": "^2.0.2",
     "@types/react-map-gl": "^5.2.11",
     "@types/react-plotly.js": "^2.6.0",
+    "@types/react-scroll-to-bottom": "^4.2.0",
     "@types/react-syntax-highlighter": "^15.5.5",
     "@types/react-transition-group": "^4.4.5",
     "@types/react-virtualized": "^9.21.21",
